<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_loginPage"
    tools:context=".task1.FbloginPageSample">

    <ImageView
        android:id="@+id/facebook_logo"
        android:layout_width="290dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/fb_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@color/white"
        android:hint="@string/email_or_phone_number"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebook_logo" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:background="#4f69a2"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:elevation="0dp"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/sign_up_for_facebook"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />

    <TextView
        android:id="@+id/tv_helpCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/help_center"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup"

        />


</androidx.constraintlayout.widget.ConstraintLayout>