<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task1.facebookPost">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/routename" />
    </androidx.cardview.widget.CardView>
<TextView
    android:id="@+id/acount_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/unblast"
    android:textSize="20sp"
    app:layout_constraintLeft_toRightOf="@id/profile_image"
    app:layout_constraintTop_toTopOf="@id/profile_image"
    android:textStyle="bold"
    android:textColor="@color/black"
    android:layout_marginStart="10dp"
    />
    <TextView
        android:id="@+id/post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_hrs"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        android:layout_marginStart="10dp"
        />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintLeft_toRightOf="@id/post_date"
        app:layout_constraintBottom_toBottomOf="@id/post_date"/>
    <ImageView
        android:id="@+id/more_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/more_tools"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/post_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buckle_up_because_change_is_coming_to_wordpress"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/post_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/http_unblast_com_color_schemes"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_word"
        android:textStyle="bold"
        android:textColor="@color/background_loginPage"
        android:layout_marginStart="10dp"
        />
    <ImageView
        android:id="@+id/post_image"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:src="@drawable/post_photo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_link"
        android:scaleType="fitXY"
        android:layout_marginTop="10dp"
        />
    <ImageView
        android:id="@+id/like_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/like_fb_icon"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_image"
        />
    <TextView
        android:id="@+id/like_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/like_icon"
        app:layout_constraintBottom_toBottomOf="@id/like_icon"
        android:textStyle="bold"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/mini_profile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/like_number">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/routename" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_share"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/mini_profile"
        app:layout_constraintTop_toTopOf="@id/mini_profile"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        />

<LinearLayout
    android:id="@+id/box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/mini_profile"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    >
    <ImageView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="30dp"
        android:src="@drawable/likeicon"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/like"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="30dp"
        android:src="@drawable/comment"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <ImageView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="30dp"
        android:src="@drawable/share_icon"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="20sp" />
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>